<resources>
    <string name="app_name">Bored</string>
    <string name="find_activity">Find Activity</string>
    <string name="participants">Participants</string>
    <string name="rb_price">Only free options</string>
    <string name="btn_text">I\'ll be lucky!</string>
    <string name="btn_open_link">Try it here</string>
    <string name="tv_type">Type</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="about">About</string>
    <string name="image_desc">image</string>
    <string name="text_api">API: \n https://www.boredapi.com/</string>
    <string name="text_author">My GitHub: \n https://github.com/YuriZhuravlev/BoredApp</string>
    <string name="text_main">Created by Yuri Zhuravlev</string>
    <string name="help">Help</string>
    <string name="notes">Notes</string>
    <string name="my_notes">My notes</string>
    <string name="change_theme">Change theme</string>
    <string name="add">Add note</string>
</resources>