<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AboutFragment">

    <ImageView
        android:padding="16dp"
        android:id="@+id/image_833r"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitCenter"
        tools:src="@drawable/img_833r_c0de_light"
        app:layout_constraintBottom_toTopOf="@id/text_main"
        android:contentDescription="@string/image_desc" />

    <TextView
        android:id="@+id/text_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_main"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/text_api"/>

    <TextView
        android:id="@+id/text_api"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text="@string/text_api"
        android:gravity="center"
        android:textIsSelectable="true"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/text_source"/>

    <TextView
        android:id="@+id/text_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/text_author"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>