<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ActivityFragment">

    <TextView
        android:id="@+id/tv_find_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_find_activity"
        android:layout_marginTop="@dimen/normal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        tools:listitem="@tools:sample/cities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_find_activity"/>

    <EditText
        android:id="@+id/et_input_participants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/participants"
        android:gravity="center"
        android:layout_margin="@dimen/normal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_type"/>

    <RadioButton
        android:id="@+id/rb_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rb_price"
        android:layout_margin="@dimen/normal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input_participants"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/normal_margin"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/rb_price"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/btn_do"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/normal_margin"
        android:layout_height="wrap_content"
        android:text="@string/btn_text"
        app:layout_constraintTop_toBottomOf="@+id/view" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/btn_do"
    app:layout_constraintBottom_toBottomOf="parent"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_activity_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Сделать приложение по открытому API"
            android:layout_margin="@dimen/normal_margin"/>

        <TextView
            android:id="@+id/tv_activity_ru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Сделать приложение по открытому API"
            android:layout_margin="@dimen/normal_margin"/>
    </LinearLayout>
</ScrollView>

<!--    <TextView
        android:id="@+id/tv_activity_en"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Сделать приложение по открытому API"
        app:layout_constraintTop_toBottomOf="@id/btn_do"
        android:layout_margin="@dimen/normal_margin"/>

    <TextView
        android:id="@+id/tv_activity_ru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Сделать приложение по открытому API"
        app:layout_constraintTop_toBottomOf="@id/tv_activity_en"
        android:layout_margin="@dimen/normal_margin"/>
-->
</androidx.constraintlayout.widget.ConstraintLayout>